[gd_scene load_steps=5 format=3 uid="uid://c7vxgcoa5jljn"]

[ext_resource type="PackedScene" uid="uid://2l0vwnei157m" path="res://Scenes/Instances/Interface/ColorChoice.tscn" id="2_iy2c0"]
[ext_resource type="Script" path="res://Codes/Uniques/Systems/SelectionMenu.gd" id="2_jef15"]
[ext_resource type="PackedScene" uid="uid://bmv7pp24bsp7s" path="res://Scenes/Uniques/Systems/PresetColorChoices.tscn" id="2_lw7on"]
[ext_resource type="Script" path="res://Codes/Instances/Classes/ScreenGrid.gd" id="3_vm6hy"]

[node name="SelectionMenu" type="Control"]
layout_mode = 3
anchor_right = 0.2
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_jef15")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.113725, 0.176471, 0.266667, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Delete" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.9
anchor_right = 0.95
anchor_bottom = 0.975
text = "Delete"

[node name="NodeName" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.025
anchor_right = 0.95
anchor_bottom = 0.075
mouse_filter = 1

[node name="Text" type="Label" parent="NodeName"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.35
anchor_bottom = 1.0
text = "Name :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Edit" type="LineEdit" parent="NodeName"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.45
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 15
text = "Name"
placeholder_text = "Node Name"
alignment = 1
max_length = 15
context_menu_enabled = false

[node name="Types" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.875
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Group" type="Control" parent="Types"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Color" type="Control" parent="Types/Group"]
layout_mode = 1
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 0.15
mouse_filter = 2

[node name="Text" type="Label" parent="Types/Group/Color"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.25
text = "Color :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Choices" parent="Types/Group/Color" instance=ExtResource("2_lw7on")]
layout_mode = 1
anchor_left = 0.0
anchor_right = 1.0
grow_horizontal = 1
grow_vertical = 1

[node name="Icon" type="Control" parent="Types/Group"]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.325

[node name="Text" type="Label" parent="Types/Group/Icon"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.25
text = "Icon :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icons" type="GridContainer" parent="Types/Group/Icon"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.25
columns = 6
script = ExtResource("3_vm6hy")
item_size = 25.0

[node name="null" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="house" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="semicolon" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="document" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="pen" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="lock" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="controller" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="person" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="gps" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="letter" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="reload" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="bricks" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="cursor" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="star" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="droplet" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="links" parent="Types/Group/Icon/Icons" instance=ExtResource("2_iy2c0")]
layout_mode = 2

[node name="Note" type="Control" parent="Types"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Color" type="Control" parent="Types/Note"]
layout_mode = 1
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 0.2
mouse_filter = 2

[node name="Choices" parent="Types/Note/Color" instance=ExtResource("2_lw7on")]
layout_mode = 1
anchor_top = 0.0
offset_top = 35.0

[node name="Text" type="Label" parent="Types/Note/Color"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_right = 0.95
offset_bottom = 35.0
text = "Color :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Size" type="Control" parent="Types/Note"]
layout_mode = 1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
offset_bottom = 35.0
mouse_filter = 2

[node name="FontSize" type="SpinBox" parent="Types/Note/Size"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.9
anchor_bottom = 1.0
min_value = 12.0
max_value = 32.0
value = 18.0

[node name="Text" type="Label" parent="Types/Note/Size"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.5
anchor_bottom = 1.0
text = "Font Size :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Image" type="Control" parent="Types"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Scale" type="Label" parent="Types/Image"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
text = "Scale : x1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ImageSize" type="HSlider" parent="Types/Image"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 0.025
offset_top = 25.0
min_value = 0.05
max_value = 2.0
step = 0.01
value = 0.05

[node name="ImageType" type="OptionButton" parent="Types/Image"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.9
anchor_bottom = 0.15
offset_bottom = 31.0
item_count = 3
selected = 0
popup/item_0/text = "Web-Link"
popup/item_0/id = 0
popup/item_1/text = "Path"
popup/item_1/id = 1
popup/item_2/text = "Stored"
popup/item_2/id = 2

[node name="ImagePath" type="LineEdit" parent="Types/Image"]
visible = false
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 0.25
context_menu_enabled = false

[node name="DeleteImage" type="Button" parent="Types/Image"]
visible = false
custom_minimum_size = Vector2(0, 35)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.35
anchor_right = 0.9
anchor_bottom = 0.35
offset_left = -0.480001
offset_top = 0.25
tooltip_text = "Delete the image stored in the \"images\" folder in your project folder"
text = "Delete Image"

[node name="DownloadImage" type="Button" parent="Types/Image"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.35
anchor_right = 0.9
anchor_bottom = 0.35
text = "Download Image"

[node name="ImageID" type="SpinBox" parent="Types/Image"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 0.25
rounded = true
alignment = 1
prefix = "ID : "

[connection signal="pressed" from="Delete" to="." method="_on_button_pressed"]
[connection signal="text_submitted" from="NodeName/Edit" to="." method="_on_edit_text_submitted"]
[connection signal="value_changed" from="Types/Note/Size/FontSize" to="." method="_on_font_size_value_changed"]
[connection signal="value_changed" from="Types/Image/ImageSize" to="." method="_on_image_size_value_changed"]
[connection signal="item_selected" from="Types/Image/ImageType" to="." method="_on_image_type_item_selected"]
[connection signal="text_submitted" from="Types/Image/ImagePath" to="." method="_on_image_path_text_submitted"]
[connection signal="pressed" from="Types/Image/DeleteImage" to="." method="_on_delete_image_pressed"]
[connection signal="pressed" from="Types/Image/DownloadImage" to="." method="_on_download_image_pressed"]
[connection signal="value_changed" from="Types/Image/ImageID" to="." method="_on_image_id_value_changed"]
